password_reset update

--- a/project4/templates/uauth/login.html
+++ b/project4/templates/uauth/login.html
@@ -63,7 +63,7 @@
         </div>
 
         <div class="row-right">
-          <a href="{% url 'uauth:email' %}">비밀번호 찾기 →</a>
+          <a href="{% url 'uauth:password_reset' %}">비밀번호 찾기 →</a>
         </div>
 
         <button type="submit" class="btn">로그인</button>
